# Hybrid-ASP-Planning

./: README.md
src/examples/indoor_navigation_task_domain/: package.xml
src/examples/indoor_navigation_task_domain/common/: domain_turtlebot_demo.pddl
src/examples/indoor_navigation_task_domain/config/: waypoints.yaml
src/examples/indoor_navigation_task_domain/graphs/: graph_wg.xml
src/examples/indoor_navigation_task_domain/maps/: turtlebot3_house.pgm
src/examples/indoor_navigation_task_domain/scripts/: move_base_interface.py  sense_action_interface.py
src/examples/object_pickup_task_domain/: CMakeLists.txt  package.xml
src/examples/object_pickup_task_domain/common/: graspDomain.pddl  graspProblem.pddl  grasp_gen_problem.pddl  plan.pddl
src/examples/object_pickup_task_domain/launch/: tiago_office_navigation_pickup.launch  tiago_office_roadmap_server.launch  tiago_office_world.launch  tiago_spawn.launch
src/examples/object_pickup_task_domain/scripts/: tiago_planning_command.bash  tiago_sense_action_interface.py  tiago_sense_base_interface.py
src/examples/object_pickup_task_domain/src/: calculate_path_length.cpp  record_robot_realtime_path.cpp  set_gazebo_tiago_cube_pose.cpp  set_rviz_initial_tiago_pose.cpp
src/examples/robot_simulation_models/tiago_model/robot_pose/: CHANGELOG.rst  package.xml
src/hybrid_asp_core/observation_goal_planning/: CMakeLists.txt  setup.py
src/hybrid_asp_core/observation_goal_planning/modes/: dynamic.incremental.reset.lp
src/hybrid_asp_core/observation_goal_planning/modes/bc_encodings/: dynamic.fixed.recording.bc  dynamic.incremental.dyn_reset.bc  dynamic.incremental.reset.bc  static.incremental.recording.bc
src/hybrid_asp_core/observation_goal_planning/nodes/: rosoClingo.py
src/hybrid_asp_core/observation_goal_planning/srv/: GetGoalInformation.srv
src/hybrid_asp_core/task_goal_planning/rosplan_dependencies/: CMakeLists.txt
src/hybrid_asp_core/task_goal_planning/rosplan_knowledge_base/: CMakeLists.txt
src/observation_goal_planning/: package.xml
src/observation_goal_planning/action/: ROSoClingo.action
src/observation_goal_planning/launch/: rosoclingo_run.launch
src/observation_goal_planning/mailbot/instances/: graph_wg.lp
src/observation_goal_planning/modes/: static.incremental.recording.lp
src/observation_goal_planning/modes/bc_encodings/: static.fixed.recording.bc
src/rosplan/rosplan_dependencies/VAL/src/: DYNATranslator.cpp  LPGPTranslator.cpp  SASActions.cpp  TypeStripWC.cpp
src/rosplan/rosplan_knowledge_base/scripts/: query_knowledge_test.py
src/rosplan/rosplan_knowledge_base/src/: KnowledgeBaseFactory.cpp  PDDLKnowledgeBase.cpp
src/rosplan/rosplan_knowledge_base/src/VALfiles/: LPGPTranslator.cpp  RelaxTranslator.cpp
src/rosplan/rosplan_planning_system/: package.xml
src/rosplan/rosplan_planning_system/src/ActionInterface/: RPActionInterface.cpp
src/rosplan/rosplan_planning_system/src/PlannerInterface/: PlannerInterface.cpp
src/rosplan/rosplan_planning_system/src/ProblemGeneration/: ProblemGeneratorFactory.cpp
src/rosplan_demos/rosoclingo-1.0/mailbot/: mailbot.lp  mailbot_sensing.lp  mailbot_sensing_22.lp  mailbot_sensing_actuating.lp  mailbot_sensing_actuating_concurrent.lp  mailbot_sensing_actuating_concurrent_complete_dynamic.lp  mailbot_sensing_actuating_concurrent_complete_success.lp  turtlebot3_asp_model.lp  turtlebot3_asp_model_backup.lp
src/rosplan_demos/rosoclingo-1.0/modes/: dynamic.fixed.recording.lp  dynamic.incremental.dyn_reset.lp  dynamic.incremental.recording.lp  static.fixed.recording.lp
src/rosplan_demos/rosoclingo-1.0/modes/bc_encodings/: dynamic.incremental.recording.bc
src/rosplan_demos/rosoclingo-1.0/msg/: ROSoClingoIn.msg  ROSoClingoOut.msg
src/rosplan_demos/rosoclingo-1.0/nodes/: rosoClingoGringoControl.py  rosoClingoRequestHandler.py  run-1.0.py
src/rosplan_demos/rosplan_demos_interfaces/rosplan_interface_mapping/src/: RPRoadmapServer.cpp
src/rosplan_demos/rosplan_demos_interfaces/rosplan_interface_movebase/: package.xml
src/rosplan_demos/rosplan_demos_interfaces/rosplan_interface_movebase/src/: RPMoveBase.cpp
src/rosplan_demos/rosplan_turtlebot3_demo/graphs/: angle_wg.xml  vps_wg.xml
src/rosplan_demos/rosplan_turtlebot3_demo/launch/: turtlebot_main.launch
src/rosplan_demos/rosplan_turtlebot3_demo/maps/: turtlebot3_house.yaml
src/rosplan_demos/rosplan_turtlebot3_demo/scripts/: turtlebot_explore_common.bash
src/rosplan_demos/rosplan_turtlebot3_demo/worlds/: turtlebot3_house.world
src/rosplan_demos_interfaces/rosplan_interface_movebase/: CMakeLists.txt
src/rosplan_demos_interfaces/rosplan_interface_movebase/src/: record_robot_realtime_path.cpp  set_gazebo_cube_pose.cpp
src/rosplan_interface_movebase/include/rosplan_interface_movebase/: RPMoveBase.h
src/rosplan_interface_movebase/src/: calculate_path_length.cpp  set_rviz_robot_pose.cpp
src/rosplan_turtlebot3_demo/: CMakeLists.txt
src/rosplan_turtlebot3_demo/launch/: turtlebot3_bringup_sim.launch
src/rosplan_turtlebot3_demo/scripts/: goto_action_interface.py  sense_base_interface.py
src/task_goal_planning/rosplan_dependencies/VAL/src/: RelaxTranslator.cpp
src/task_goal_planning/rosplan_knowledge_base/include/rosplan_knowledge_base/: KnowledgeBaseFactory.h
src/task_goal_planning/rosplan_knowledge_base/src/: KnowledgeBase.cpp
src/task_goal_planning/rosplan_knowledge_base/src/VALfiles/: DYNATranslator.cpp  pddl+.yacc
src/task_goal_planning/rosplan_planning_system/: CMakeLists.txt
src/task_goal_planning/rosplan_planning_system/src/PlanDispatch/: PlanDispatcher.cpp
src/task_goal_planning/rosplan_planning_system/src/PlannerInterface/: POPFPlannerInterface.cpp
src/task_goal_planning/rosplan_planning_system/src/ProblemGeneration/: ProblemGenerator.cpp
src/turtlebot3_base/aruco_ros/aruco_msgs/: CMakeLists.txt  package.xml
src/turtlebot3_base/turtlebot3/turtlebot3_bringup/launch/: turtlebot3_remote.launch
src/turtlebot3_base/turtlebot3/turtlebot3_navigation/launch/: move_base.launch  turtlebot3_navigation.launch
(+13 files in other folders)
